--- a/interactive.ipynb
+++ b/interactive.ipynb
@@ -13,6 +13,8 @@
     "import matplotlib as mpl\n",
     "import scipy as sp\n",
     "import plotly.offline as py\n",
+    "import plotly\n",
+    "py.init_notebook_mode(True)\n",
     "from ipywidgets import interact\n",
     "s=c.tf([1,0],1)"
    ]
